--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <div class="hero-tag">Primera Edición 2025</div>
+            <div class="hero-tag">Crece tu negocio ahora</div>
             <h1>TALLER DE VENTAS & MARKETING CON IA</h1>
             <p style="max-width: 800px; margin: 0 auto 30px;">De la frustración a la automatización: consigue prospectos ilimitados y cierra más ventas con inteligencia artificial sin aumentar tu esfuerzo</p>
             
