--- a/index.html
+++ b/index.html
@@ -298,15 +298,17 @@
             <h1>TALLER DE VENTAS & MARKETING CON IA</h1>
             <p style="max-width: 800px; margin: 0 auto 30px;">De la frustración a la automatización: consigue prospectos ilimitados y cierra más ventas con inteligencia artificial sin aumentar tu esfuerzo</p>
                 <!-- Sección de Video - Clase Gratuita -->
-                <div style="max-width: 800px; margin: 0 auto 30px; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 10px 25px rgba(0,0,0,0.08);">
+                <div style="max-width: 800px; margin: 15px auto; position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.08);">
                     <iframe 
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
                         src="https://player.vimeo.com/video/1072423572" 
+                        title="Clase Gratuita - Taller de Ventas & Marketing con IA" 
                         frameborder="0" 
                         allow="autoplay; fullscreen; picture-in-picture" 
                         allowfullscreen>
                     </iframe>
                 </div>
+
             <div class="hero-buttons">
                                     <a href="https://www.paypal.com/ncp/payment/5FW2C68TJNT8N" class="btn btn-primary">Reservar tu lugar ahora</a>
                 <a href="#tematicas" class="btn btn-secondary">Ver detalles del taller</a>
